Fix some bugs on small screens

--- a/client/src/Client.css
+++ b/client/src/Client.css
@@ -82,6 +82,7 @@ body {
   gap: 30px;
   padding: 50px 5%;
   justify-content: center;
+  margin-bottom: 100px;
 }
 
 .card {
